--- a/packages/extension/src/_locales/en/messages.json
+++ b/packages/extension/src/_locales/en/messages.json
@@ -3,6 +3,6 @@
     "message": "Deep Reading Extension"
   },
   "extension_description": {
-    "message": "支持移动端翻译查词，移动端英文阅读大杀器，更多功能即将来袭！"
+    "message": "点读查词、长按翻译，扫清英语阅读障碍。Deep Reading致力于提升英语学习阅读体验。手机、平板可用（https://wrp.netlify.app）"
   }
 }
