--- a/packages/extension/res/share/_locales/en_US/messages.json
+++ b/packages/extension/res/share/_locales/en_US/messages.json
@@ -1,9 +1,8 @@
 {
   "extension_name": {
-    "message": "Deep Reading 查词翻译"
+    "message": "Deep Reading Extension"
   },
   "extension_description": {
     "message": "点读查词、长按翻译，扫清英语阅读障碍。Deep Reading致力于提升英语学习阅读体验。手机、平板可用（https://wrp.netlify.app）"
   }
 }
-
