--- a/packages/extension/res/share/_locales/en_GB/messages.json
+++ b/packages/extension/res/share/_locales/en_GB/messages.json
@@ -1,8 +1,8 @@
 {
   "extension_name": {
-    "message": "Deep Reading Extension"
+    "message": "Deep Reading Translate"
   },
   "extension_description": {
-    "message": "点读查词、长按翻译，扫清英语阅读障碍。Deep Reading致力于提升英语学习阅读体验。手机、平板可用（https://wrp.netlify.app）"
+    "message": "秒查词、秒翻译，轻松阅读英语原文。兼容Android设备浏览器"
   }
 }
